
	* In JOIN notify handling, mark that the cache entry of the
	  client cannot be expired.  Can cause crashes on normal
	  server (asserts client->channels).  Affected file is
	  silcd/packet_receive.c.

	* From now on distribution versions are used as protocol versions
	  instead of by default using the Toolkit base version as protocol 
	  version.  Affected file prepare.

Sat Sep  7 14:22:43 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Rewritten check for POSIX threads.  Use --with-pthreads[=DIR]
	  for implied search (not needed on platforms which has native
	  pthreads library).  Use --without-pthreads to disable threads.
	  Affected file is configure.in.pre

	* Fixed --with-iconv on platforms which need to bypass (broken)
          native iconv().  Affected file is configure.in.pre

Sat Sep  7 15:08:13 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Moved -C option parsing in Irssi SILC client at same time
	  as other options.  The UI was initialized earlier and caused
	  problems on command line.  Bug #16.  Affected file is
	  irssi/src/silc/core/silc-core.c.

Mon Sep  2 23:00:30 CEST 2002 Johnny Mnemonic <johnny@themnemonic.org>

	* Added global variable silc_log_timestamp that tells silclog
	  wether to print or not the timestamp in the logging files.
	  Affected file lib/silcutil/silclog.[ch].

	* Added silcd configuration option Timestamp in the Logging
	  section.  Affected file silcd/serverconfig.[ch],
	  doc/example_silcd.conf.in.

Fri Aug 30 08:57:33 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed fingerprint checking to check for entirely empty
	  fingerprint instead of two first bytes when determining
	  if it is set.  Bug #18.  Affected file silcd/command.c.

	* Fixed duplicate PKCS name registering to not allow it.
	  Bugs #17.  Affected file lib/silccrypt/silcpkcs.c.

Sun Aug 25 08:02:04 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>

	* Conditionalize non-gcc compiler optimizations for various